kubernetes-volumes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework-deployment
  namespace: homework
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80 # Внутри контейнера. Автоматом открывается на поде
          name: nginx-port
        volumeMounts:
        - name: config-volume
          mountPath: /homework/conf
        volumeMounts:
        - name: nginx-custom-config # из этого тома возьми только custom.conf и смонтируй его в путь котроый ниже
          mountPath: /etc/nginx/conf.d/
        volumeMounts:
        - name: workdir
          mountPath: /usr/share/nginx/html # Директория внутри контейнера
        livenessProbe:
          httpGet:
            port: 80
            path: /index.html
          initialDelaySeconds: 5
          periodSeconds: 5
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh", "-c", "rm /homework/index.html"]
      dnsPolicy: Default
      volumes:
      - name: workdir
        persistentVolumeClaim:
          claimName: homework-pvc  # Ссылка на PVC
      - name: custom-nginx-conf
        configMap:
          name: nginx-custom-config
          items:
          - key: custom.conf
            path: custom.conf
      - name: config-volume
        configMap:
          name: homework-cm
          items:
          - key: "game.properties"
            path: "game.properties"
          - key: "user-interface.properties"
            path: "user-interface.properties"
        # emptyDir: {} # Том, который живет внутри ПОДА, который доступен для всех контейнеров
  strategy:
   type: RollingUpdate
   rollingUpdate:
     maxUnavailable: 1
