kubernetes-volumes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework-service
  namespace: homework
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80 # порт сервиса снаружи
      targetPort: nginx-port # Порт внутри пода
  type: ClusterIP
